# ai-job-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  LICENSE  docker-compose.jobspy.yml  docker-compose.llm.yml  docker-compose.playwright.yml  docker-compose.web.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/jobspy/: Dockerfile  main.py  pyproject.toml
apps/llm/: .dockerignore  Dockerfile  config.py  embed.py  main.py  model_manager.py  package.json  prompts.py  pyproject.toml  pyrightconfig.json  schemas.py
apps/llm/providers/: __init__.py  base.py  claude_cli.py  local.py
apps/llm/src/: index.ts
apps/playwright/: Dockerfile  package.json  tsconfig.json
apps/react-native/: App.tsx  app.json  metro.config.js  package.json
apps/server/: package.json  tsconfig.json
apps/web/: .cta.json  .env.example  .gitignore  Dockerfile  components.json  package.json  server.ts  tsconfig.json  vite.config.ts
devtools/: index.html  package.json  server.mjs
docs/: docker-strategy.md  llm-integration.md  mobile-app-commercialization.md  workday-handler.md
docs/cover-letters/: cover-letter-system.md
docs/database/: database-architecture.md  migration-rules.md
docs/dry-run-applying/: status.md
docs/features/: ai-cover-letter.md  anti-bot-strategy.md  apply-error-log.md  dock-progress.md  duplicate-detection.md  humanization.md  job-preferences.md  linkedin-easy-apply.md  linkedin-find-matches.md  question-tracking.md  suitability-scoring.md
docs/google-api/: architecture.md
scripts/: clear-db.mjs  docker-dev.mjs  migrate-check.mjs
(+216 files in other folders)
