[project]
name = "job-app-bot-llm"
version = "1.0.0"
description = "Local LLM service for cover letter generation"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "llama-cpp-python==0.2.90",
    "pydantic==2.5.2",
    "psutil==5.9.6",
    "huggingface-hub>=0.19.4",
    "sentence-transformers>=2.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
